--- a/examples/webapp-library/parent/.env.production
+++ b/examples/webapp-library/parent/.env.production
@@ -1,2 +1,2 @@
-REACT_APP_WEBAPP1=https://precor.github.io/web-api-bridge/examples/webapp-library/webapp1/build/
-REACT_APP_WEBAPP2=https://precor.github.io/web-api-bridge/examples/webapp-library/webapp2/build/
+REACT_APP_WEBAPP1=https://precorPhaniPutrevu.github.io/web-api-bridge/examples/webapp-library/webapp1/build/
+REACT_APP_WEBAPP2=https://precorPhaniPutrevu.github.io/web-api-bridge/examples/webapp-library/webapp2/build/
